--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node backend/server.js",
+    "start:react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node src/server.js"
+    "server": "node backend/server.js",
+    "server:dev": "nodemon backend/server.js",
+    "dev": "concurrently \"npm run start:react\" \"npm run server:dev\"",
+    "deploy": "npm run build && npm start"
   },
   "eslintConfig": {
     "extends": [
