--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "^5.0.1",
+    "serverless-http": "^3.2.0",
     "sib-api-v3-sdk": "^8.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node backend/server.js",
-    "start:react": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node backend/server.js",
-    "server:dev": "nodemon backend/server.js",
-    "dev": "concurrently \"npm run start:react\" \"npm run server:dev\"",
-    "deploy": "npm run build && npm start"
+    "server": "node src/server.js",
+    "vercel-build": "bash ./build.sh"
   },
   "eslintConfig": {
     "extends": [
