--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "sib-api-v3-sdk": "^8.5.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@vercel/node": "^3.0.24"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
