Checkpoint 16: Simplify slot booking with direct Excel download and remove server dependencies

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://bengaluru-city-homes-8owgg0vnk-ciphersculptors-projects.vercel.app/api
+REACT_APP_API_URL=
 REACT_APP_ENV=production
